# rosidl_dynamic_typesupport_fastrtps-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
include/rosidl_dynamic_typesupport_fastrtps/: identifier.h  serialization_support.h  visibility_control.h
rpm/: ros-jazzy-rosidl-dynamic-typesupport-fastrtps.spec  ros-rolling-rosidl-dynamic-typesupport-fastrtps.spec  template.spec
src/: identifier.cpp  serialization_support.cpp
src/detail/: fastrtps_dynamic_data.cpp  fastrtps_dynamic_data.hpp  fastrtps_dynamic_type.cpp  fastrtps_dynamic_type.hpp  fastrtps_serialization_support.cpp  fastrtps_serialization_support.hpp  macros.hpp  utils.cpp  utils.hpp
