<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rosidl_dynamic_typesupport_fastrtps</name>
  <version>0.4.1</version>
  <description>FastDDS serialization support implementation for use with C/C++.</description>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>Apache License 2.0</license>
  <author email="brandon@openrobotics.org">Brandon Ong</author>

  <buildtool_depend>ament_cmake_ros_core</buildtool_depend>

  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>rosidl_dynamic_typesupport</depend>
  <depend>fastcdr</depend>
  <depend>fastdds</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
